// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification/> component renders correctly 1`] = `
<styled.div
  className="notification-container"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#CFE2FF",
      "borderColor": "#D6D4FE",
      "color": "#084298",
    }
  }
>
  <p
    className="message"
  >
    <span
      className="font-700"
    >
      INFO:
    </span>
     
  </p>
</styled.div>
`;

exports[`<Notification/> should render text message correctly 1`] = `
<styled.div
  className="notification-container"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#CFE2FF",
      "borderColor": "#D6D4FE",
      "color": "#084298",
    }
  }
>
  <p
    className="message"
  >
    <span
      className="font-700"
    >
      INFO:
    </span>
     
    Hello World!
  </p>
</styled.div>
`;
